# fractal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.agents/skills/fractal/: RECIPES.md  SKILL.md
.agents/skills/fractal-headless/: RECIPES.md  SKILL.md
.agents/skills/fractal_add_provider/: SKILL.md
docs/: config.md  headless.md  predict-rlm-notes.md  session-management.md
fractal-remotion/: README.md  package-lock.json  package.json
fractal-remotion/src/: Composition.tsx  Root.tsx  index.css
src/fractal/: cli.py  config.py  config_commands.py  connectivity.py  context_meter.py  credentials.py  errors.py  events.py  lm_types.py  onboarding.py  providers.py  runtime.py  runtime_lms.py  session.py
src/fractal/agent/: service.py  signature.py  skills.py
src/fractal/tui/: __init__.py  app.py
tests/: conftest.py  test_cli_config.py  test_config.py  test_config_edit_commands.py  test_config_layering.py  test_connectivity.py  test_context_meter.py  test_credentials.py  test_errors.py  test_events.py  test_integration_interrupt_recovery.py  test_providers.py  test_runtime.py  test_runtime_interrupt_recovery.py  test_session.py  test_smoke.py  test_tui.py
