[project]
name = "fractal"
version = "0.1.0"
description = "Interactive coding-agent CLI built around a Recursive Language Model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "prompt-toolkit>=3.0",
    "predict-rlm",
    "rich>=13",
    "tomli-w>=1.2",
]

[project.scripts]
fractal = "fractal.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
predict-rlm = { path = "../predict-rlm", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fractal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
