[project]
name = "fractal-rlm"
version = "0.1.1-alpha1"
description = "Interactive coding-agent CLI built around a Recursive Language Model"
authors = [{ name = "Trampoline AI" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["coding-agent", "cli", "rlm", "predict-rlm", "dspy", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2",
    "prompt-toolkit>=3.0",
    "predict-rlm[sbx]>=0.7.0",
    "rich>=13",
    "tomli-w>=1.2",
]

[project.urls]
Homepage = "https://www.trampoline.ai/"
Repository = "https://github.com/Trampoline-AI/fractal"
Issues = "https://github.com/Trampoline-AI/fractal/issues"

[project.scripts]
fractal = "fractal.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not integration"]
markers = [
    "integration: tests that call real PredictRLM/model/sbx services",
]

[tool.ruff]
lint.select = ["E", "F", "W", "I", "N"]
lint.ignore = ["E501"]
line-length = 96

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806"]

[tool.hatch.build.targets.wheel]
packages = ["src/fractal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
